--- a/index.html
+++ b/index.html
@@ -60,6 +60,42 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">what i do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">vanilla javascript</p>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga laborum soluta et, voluptate beatae reprehenderit?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">react</p>
+                    <p class="skill-description">Deserunt consequatur ipsam excepturi unde recusandae delectus aspernatur minus nulla. Aut enim ipsum quidem error!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">mongodb</p>
+                    <p class="skill-description">Architecto, perferendis? Esse vero voluptatum placeat, beatae eos exercitationem corporis porro. Reprehenderit earum quo aliquam?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">nodejs</p>
+                    <p class="skill-description">Nobis cumque accusamus dicta, asperiores voluptatibus ipsum officiis cupiditate id, architecto molestiae, possimus fugit voluptatem.</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+            <h3 class="section-title">a summary of my resume</h3>
+            <div class="resume-content">
+                <div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
